--- a/project/youtube.css
+++ b/project/youtube.css
@@ -1,25 +1,63 @@
 .thumbnail{
-  width: 300px;
+  width: 100%;
   /* height: 300px; */
   /* margin: 10px; */
   border: solid 1px black;
   /* object-fit: contain;
   object-position: top; */
-  display: block;
+  /* display: block; */
 }
-.searchbar{
-  /* font-size: 20px;
-  margin-left: 12px; */
-  display: block;
-}
-.video-title{
+
+/* .video-title{
   width: 300px;
-}
-.video-preview{
-  display: inline-block;
-  width: 300px;
-  vertical-align: top;
-  margin-right: 15px;
+} */
+/* .video-preview{
+  /* display: inline-block; */
+  /* width: 300px;
+  vertical-align: top; */
+  /* margin-right: 15px;
+  margin-bottom: 10px; */
   /* border: solid 1px black;
-  margin: 10px; */
+  margin: 10px; 
+}*/
+.video-title{
+  margin: 0;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 14px;
+  margin-bottom: 12px;
+}
+.channel-logo{
+  vertical-align: top;
+}
+.video-details{
+  
+}
+.profile-picture{
+  width: 40px;
+  border-radius: 40px;
+}
+.thumbnail-row{
+  margin-bottom: 12px;
+}
+
+.channel-name{
+  font-size: 14px;
+  color: rgb(96,96,96);
+  margin-bottom:6px;
+}
+.views-timeline{
+  font-size: 12px;
+  color:rgb(96,96,96);
+  margin-bottom: 4px;
+}
+.video-grid{
+  display: grid;
+  grid-template-columns: 50px 1fr ;
+}
+.screen-grid{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  row-gap: 40px;
+  column-gap: 20px;
 }
